[build-system]
requires = ["setuptools >= 80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rgevolve"
version = "0.1.0"
authors = [
    {name = "Aleks SmolkoviÄ", email = "aleks.smolkovic@ijs.si"},
    {name = "Peter Stangl", email = "peter.stangl@cern.ch"},
]
description = "rgevolve metapackage: install all rgevolve components at once"
requires-python = ">=3.8"
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "rgevolve-core==0.1.0",
    "rgevolve.smeft.warsaw==0.1.0",
    "rgevolve.smeft.warsaw_up==0.1.0",
    "rgevolve.wet.flavio==0.1.0",
    "rgevolve.wet.jms==0.1.0",
    "rgevolve.wet_4.flavio==0.1.0",
    "rgevolve.wet_4.jms==0.1.0",
    "rgevolve.wet_3.flavio==0.1.0",
    "rgevolve.wet_3.jms==0.1.0",
]
