[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "rgevolve"
dynamic = ["version"]
authors = [
    {name = "Aleks Smolkovič", email = "aleks.smolkovic@ijs.si"},
    {name = "Peter Stangl", email = "peter.stangl@cern.ch"},
]
description = "rgevolve metapackage: install all rgevolve components at once"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "rgevolve-core==0.1.1",
    "rgevolve.smeft.warsaw==0.1.1",
    "rgevolve.smeft.warsaw_up==0.1.1",
    "rgevolve.wet.flavio==0.1.1",
    "rgevolve.wet.jms==0.1.1",
    "rgevolve.wet_4.flavio==0.1.1",
    "rgevolve.wet_4.jms==0.1.1",
    "rgevolve.wet_3.flavio==0.1.1",
    "rgevolve.wet_3.jms==0.1.1",
]

[tool.setuptools]
py-modules = []

[tool.setuptools_scm]
