[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "rgevolve"
dynamic = ["version"]
authors = [
    {name = "Aleks Smolkovič", email = "aleks.smolkovic@ijs.si"},
    {name = "Peter Stangl", email = "peter.stangl@cern.ch"},
]
description = "rgevolve metapackage: install all rgevolve components at once"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
keywords = [
    "renormalization group",
    "RGE",
    "Wilson coefficients",
    "EFT",
    "SMEFT",
    "WET",
    "particle physics",
    "wcxf",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "rgevolve-core==0.1.1",
    "rgevolve.smeft.warsaw==0.1.1",
    "rgevolve.smeft.warsaw_up==0.1.1",
    "rgevolve.wet.flavio==0.1.1",
    "rgevolve.wet.jms==0.1.1",
    "rgevolve.wet_4.flavio==0.1.1",
    "rgevolve.wet_4.jms==0.1.1",
    "rgevolve.wet_3.flavio==0.1.1",
    "rgevolve.wet_3.jms==0.1.1",
]

[project.urls]
Source = "https://github.com/rgevolve/rgevolve"

[tool.setuptools]
py-modules = []

[tool.setuptools_scm]
